# photofix

./: CMakeLists.txt  HeifFile.cpp  HeifFile.h  README.md  main.cpp
data/: IMG_1082.HEIC
src/: FormatConverter.h  main.cpp
src/format/: FileHolder.h  HeifFileHolder.h  OpenCVFileHolder.h
